--- a/proys/admgescol/front/src/css/LiquidacionesToPdf.css
+++ b/proys/admgescol/front/src/css/LiquidacionesToPdf.css
@@ -2,7 +2,7 @@
     max-width: 600px;
     margin: auto;
   }
-  .css-tn3v0l-MuiButtonBase-root-MuiMenuItem-root{
+  .MuiPaper-root{
     color: black !important;
   }
 
